--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -17,14 +17,17 @@
   },
   "homepage": "https://github.com/Mixmln/node-08-09-cao#readme",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
+    "joi": "^17.7.0",
     "mongoose": "^6.6.4",
     "morgan": "^1.10.0",
-    "socket.io": "^4.5.3"
+    "socket.io": "^4.5.3",
+    "uid-safe": "^2.1.5"
   },
   "devDependencies": {
     "eslint": "^8.23.0",
